Update Chrome 114 and ChromeDriver 114 configuration